python/tests/test_envoy_v3/ratelimitv2test/econf.json
{
  "layered_runtime": {
    "layers": [
      {
        "name": "static_layer",
        "static_layer": {
          "envoy.reloadable_features.ext_authz_http_service_enable_case_sensitive_string_matcher": false,
          "re2.max_program_size.error_level": 200
        }
      }
    ]
  },
  "static_resources": {
    "clusters": [
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_127_0_0_1_8877_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "127.0.0.1",
                        "port_value": 8877,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_127_0_0_1_8877_default",
        "type": "STRICT_DNS"
      },
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_ratelimitv2test_http_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "ratelimitv2test-http",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_ratelimitv2test_http_default",
        "type": "STRICT_DNS"
      },
      {
        "connect_timeout": "3.000s",
        "dns_lookup_family": "V4_ONLY",
        "http2_protocol_options": {},
        "lb_policy": "ROUND_ROBIN",
        "load_assignment": {
          "cluster_name": "cluster_ratelimitv2test_rlsgrpc_default",
          "endpoints": [
            {
              "lb_endpoints": [
                {
                  "endpoint": {
                    "address": {
                      "socket_address": {
                        "address": "ratelimitv2test-rlsgrpc",
                        "port_value": 80,
                        "protocol": "TCP"
                      }
                    }
                  }
                }
              ]
            }
          ]
        },
        "name": "cluster_ratelimitv2test_rlsgrpc_default",
        "type": "STRICT_DNS"
      }
    ],
    "listeners": [
      {
        "address": {
          "socket_address": {
            "address": "0.0.0.0",
            "port_value": 8080,
            "protocol": "TCP"
          }
        },
        "filter_chains": [
          {
            "filter_chain_match": {},
            "filters": [
              {
                "name": "envoy.filters.network.http_connection_manager",
                "typed_config": {
                  "@type": "type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager",
                  "access_log": [
                    {
                      "name": "envoy.access_loggers.file",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog",
                        "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                        "path": "/dev/fd/1"
                      }
                    }
                  ],
                  "http_filters": [
                    {
                      "name": "envoy.filters.http.cors"
                    },
                    {
                      "name": "envoy.filters.http.ratelimit",
                      "typed_config": {
                        "@type": "type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit",
                        "domain": "ambassador",
                        "rate_limit_service": {
                          "grpc_service": {
                            "envoy_grpc": {
                              "cluster_name": "cluster_ratelimitv2test_rlsgrpc_default"
                            }
                          },
                          "transport_api_version": "V2"
                        },
                        "request_type": "both",
                        "timeout": "0.500s"
                      }
                    },
                    {
                      "name": "envoy.filters.http.router"
                    }
                  ],
                  "http_protocol_options": {
                    "accept_http_10": false
                  },
                  "normalize_path": true,
                  "preserve_external_request_id": false,
                  "route_config": {
                    "virtual_hosts": [
                      {
                        "domains": [
                          "*"
                        ],
                        "name": "ambassador-listener-8080-*",
                        "routes": [
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_ready",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_ready",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/check_alive",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/check_alive",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/ambassador/v0/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_127_0_0_1_8877_default",
                              "prefix_rewrite": "/ambassador/v0/",
                              "priority": null,
                              "timeout": "10.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "headers": [
                                {
                                  "exact_match": "https",
                                  "name": "x-forwarded-proto"
                                }
                              ],
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_ratelimitv2test_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_ratelimitv2test_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "rate_limits": [
                                {
                                  "actions": [
                                    {
                                      "request_headers": {
                                        "descriptor_key": "x-ambassador-test-allow",
                                        "header_name": "x-ambassador-test-allow"
                                      }
                                    },
                                    {
                                      "request_headers": {
                                        "descriptor_key": "x-ambassador-test-headers-append",
                                        "header_name": "x-ambassador-test-headers-append"
                                      }
                                    }
                                  ],
                                  "stage": 0
                                }
                              ],
                              "timeout": "3.000s"
                            }
                          },
                          {
                            "match": {
                              "case_sensitive": true,
                              "prefix": "/target/",
                              "runtime_fraction": {
                                "default_value": {
                                  "denominator": "HUNDRED",
                                  "numerator": 100
                                },
                                "runtime_key": "routing.traffic_shift.cluster_ratelimitv2test_http_default"
                              }
                            },
                            "route": {
                              "cluster": "cluster_ratelimitv2test_http_default",
                              "prefix_rewrite": "/",
                              "priority": null,
                              "rate_limits": [
                                {
                                  "actions": [
                                    {
                                      "request_headers": {
                                        "descriptor_key": "x-ambassador-test-allow",
                                        "header_name": "x-ambassador-test-allow"
                                      }
                                    },
                                    {
                                      "request_headers": {
                                        "descriptor_key": "x-ambassador-test-headers-append",
                                        "header_name": "x-ambassador-test-headers-append"
                                      }
                                    }
                                  ],
                                  "stage": 0
                                }
                              ],
                              "timeout": "3.000s"
                            }
                          }
                        ]
                      }
                    ]
                  },
                  "server_name": "envoy",
                  "stat_prefix": "ingress_http",
                  "use_remote_address": true,
                  "xff_num_trusted_hops": 0
                }
              }
            ]
          }
        ],
        "listener_filters": [],
        "name": "ambassador-listener-8080",
        "traffic_direction": "UNSPECIFIED"
      }
    ]
  }
}
