python/tests/test_envoy_v3/ratelimitv2test/snapshot.yaml
{
    "Consul": {},
    "Kubernetes": {
        "AuthService": null,
        "ConsulResolver": null,
        "DevPortal": null,
        "Host": [
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "Host",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"Host\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"ratelimitv2test\",\"scope\":\"AmbassadorTest\"},\"name\":\"cleartext-host-ratelimitv2test\",\"namespace\":\"default\"},\"spec\":{\"acmeProvider\":{\"authority\":\"none\"},\"ambassador_id\":[\"ratelimitv2test\"],\"hostname\":\"*\",\"requestPolicy\":{\"insecure\":{\"action\":\"Route\"}},\"se [...]
                    },
                    "creationTimestamp": "2020-12-23T17:00:53Z",
                    "generation": 2,
                    "labels": {
                        "kat-ambassador-id": "ratelimitv2test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "cleartext-host-ratelimitv2test",
                    "namespace": "default",
                    "resourceVersion": "17273",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/hosts/cleartext-host-ratelimitv2test",
                    "uid": "877447dd-397c-4bfc-9224-3f251bb588b7"
                },
                "spec": {
                    "acmeProvider": {
                        "authority": "none"
                    },
                    "ambassador_id": [
                        "ratelimitv2test"
                    ],
                    "hostname": "*",
                    "requestPolicy": {
                        "insecure": {
                            "action": "Route"
                        }
                    },
                    "selector": {
                        "matchLabels": {
                            "hostname": "ratelimitv2test"
                        }
                    },
                    "tlsSecret": {}
                },
                "status": {
                    "state": "Ready",
                    "tlsCertificateSource": "None"
                }
            }
        ],
        "KubernetesEndpointResolver": null,
        "KubernetesServiceResolver": null,
        "LogService": null,
        "Mapping": null,
        "Module": null,
        "RateLimitService": null,
        "TCPMapping": null,
        "TLSContext": [
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdmanualcontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdmanualcontext-manual-host-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdmanualcontext\"],\"hosts\":[\"hostcrdmanualcontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\", [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:40Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdmanualcontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdmanualcontext-manual-host-context",
                    "namespace": "default",
                    "resourceVersion": "2949",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/hostcrdmanualcontext-manual-host-context",
                    "uid": "fa19bc5d-236f-46f9-b1f1-0c10c8b2ed3f"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdmanualcontext"
                    ],
                    "hosts": [
                        "hostcrdmanualcontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdmanualcontext-manual-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"hostcrdseparatetlscontext\",\"scope\":\"AmbassadorTest\"},\"name\":\"hostcrdseparatetlscontext-separate-tls-context\",\"namespace\":\"default\"},\"spec\":{\"ambassador_id\":[\"hostcrdseparatetlscontext\"],\"max_tls_version\":\"v1.3\",\"min_tls_version\":\"v1.2\",\"secret\":\"hostcrds [...]
                    },
                    "creationTimestamp": "2020-12-23T16:59:41Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "hostcrdseparatetlscontext",
                        "scope": "AmbassadorTest"
                    },
                    "name": "hostcrdseparatetlscontext-separate-tls-context",
                    "namespace": "default",
                    "resourceVersion": "2995",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/hostcrdseparatetlscontext-separate-tls-context",
                    "uid": "e10bdb3b-8605-4f27-8943-5767c5e99f8b"
                },
                "spec": {
                    "ambassador_id": [
                        "hostcrdseparatetlscontext"
                    ],
                    "max_tls_version": "v1.3",
                    "min_tls_version": "v1.2",
                    "secret": "hostcrdseparatetlscontext-secret"
                }
            },
            {
                "apiVersion": "getambassador.io/v3alpha1alpha1",
                "kind": "TLSContext",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"getambassador.io/v3alpha1\",\"kind\":\"TLSContext\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"tlsinheritfrommodule\",\"scope\":\"AmbassadorTest\"},\"name\":\"tlsinheritfrommodule\",\"namespace\":\"default\"},\"spec\":{\"alpn_protocols\":\"h2,http/1.1\",\"ambassador_id\":[\"tlsinheritfrommodule\"],\"hosts\":[\"a.domain.com\"],\"secret\":\"tlsinheritfrommodule\"}}\n"
                    },
                    "creationTimestamp": "2020-12-23T17:01:08Z",
                    "generation": 1,
                    "labels": {
                        "kat-ambassador-id": "tlsinheritfrommodule",
                        "scope": "AmbassadorTest"
                    },
                    "name": "tlsinheritfrommodule",
                    "namespace": "default",
                    "resourceVersion": "6438",
                    "selfLink": "/apis/getambassador.io/v3alpha1alpha1/namespaces/default/tlscontexts/tlsinheritfrommodule",
                    "uid": "d4f4da8f-82b8-4c31-b484-3effd73b669f"
                },
                "spec": {
                    "alpn_protocols": "h2,http/1.1",
                    "ambassador_id": [
                        "tlsinheritfrommodule"
                    ],
                    "hosts": [
                        "a.domain.com"
                    ],
                    "secret": "tlsinheritfrommodule"
                }
            }
        ],
        "TracingService": null,
        "ingresses": null,
        "secret": null,
        "service": [
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v2\nkind: Mapping\nname: ratelimit_target_mapping\nprefix: /target/\nservice: ratelimitv2test-http\nlabels:\n  ambassador:\n  - request_label_group:\n    - x-ambassador-test-allow:\n        header: \"x-ambassador-test-allow\"\n        omit_if_not_present: true\n    - x-ambassador-test-headers-append:\n        header: \"x-ambassador-test-headers-append\"\n        omit_if_not_present: true\nambassador_id: ratelimitv2te [...]
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v2\\nkind: Mapping\\nname: ratelimit_target_mapping\\nprefix: /target/\\nservice: ratelimitv2test-http\\nlabels:\\n  ambassador:\\n  - request_label_group:\\n    - x-ambassador-test-allow:\\n        header: \\\"x-ambassador-test-allow\\\"\\n        omit_if_not_present: true\\n    - x-amba [...]
                    },
                    "creationTimestamp": "2020-12-23T20:40:03Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv2test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "ratelimitv2test-http",
                    "namespace": "default",
                    "resourceVersion": "298138",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv2test-http",
                    "uid": "5f8f280f-52e3-4bb6-a6f2-898e9738d091"
                },
                "spec": {
                    "clusterIP": "10.43.76.127",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8136
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8499
                        }
                    ],
                    "selector": {
                        "backend": "superpod-default"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"ratelimitv2test\",\"scope\":\"AmbassadorTest\"},\"name\":\"ratelimitv2test-rlsgrpc\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"http\",\"port\":80,\"protocol\":\"TCP\",\"targetPort\":8080},{\"name\":\"https\",\"port\":443,\"protocol\":\"TCP\",\"targetPort\":8443}],\"selector\":{\"backend\":\" [...]
                    },
                    "creationTimestamp": "2020-12-23T20:40:03Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv2test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "ratelimitv2test-rlsgrpc",
                    "namespace": "default",
                    "resourceVersion": "298171",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv2test-rlsgrpc",
                    "uid": "48c18ac6-363d-4f62-9e8e-568e56707078"
                },
                "spec": {
                    "clusterIP": "10.43.127.97",
                    "ports": [
                        {
                            "name": "http",
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "backend": "ratelimitv2test-rlsgrpc"
                    },
                    "sessionAffinity": "None",
                    "type": "ClusterIP"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "getambassador.io/config": "---\napiVersion: ambassador/v2\nkind: RateLimitService\nname: ratelimitv2test-rlsgrpc\nservice: \"ratelimitv2test-rlsgrpc\"\ntimeout_ms: 500\nprotocol_version: \"v2\"\nambassador_id: ratelimitv2test\n",
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{\"getambassador.io/config\":\"---\\napiVersion: ambassador/v2\\nkind: RateLimitService\\nname: ratelimitv2test-rlsgrpc\\nservice: \\\"ratelimitv2test-rlsgrpc\\\"\\ntimeout_ms: 500\\nprotocol_version: \\\"v2\\\"\\nambassador_id: ratelimitv2test\\n\"},\"labels\":{\"app.kubernetes.io/component\":\"ambassador-service\",\"kat-ambassador-id\":\"ratelim [...]
                    },
                    "creationTimestamp": "2020-12-23T20:40:02Z",
                    "labels": {
                        "app.kubernetes.io/component": "ambassador-service",
                        "kat-ambassador-id": "ratelimitv2test",
                        "scope": "AmbassadorTest"
                    },
                    "name": "ratelimitv2test",
                    "namespace": "default",
                    "resourceVersion": "298115",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv2test",
                    "uid": "48781924-4239-4dc9-b877-8cc050431333"
                },
                "spec": {
                    "clusterIP": "10.43.236.145",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "http",
                            "nodePort": 31096,
                            "port": 80,
                            "protocol": "TCP",
                            "targetPort": 8080
                        },
                        {
                            "name": "https",
                            "nodePort": 32414,
                            "port": 443,
                            "protocol": "TCP",
                            "targetPort": 8443
                        }
                    ],
                    "selector": {
                        "service": "ratelimitv2test"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            },
            {
                "apiVersion": "v1",
                "kind": "Service",
                "metadata": {
                    "annotations": {
                        "kubectl.kubernetes.io/last-applied-configuration": "{\"apiVersion\":\"v1\",\"kind\":\"Service\",\"metadata\":{\"annotations\":{},\"labels\":{\"kat-ambassador-id\":\"ratelimitv2test\",\"scope\":\"AmbassadorTest\",\"service\":\"ratelimitv2test-admin\"},\"name\":\"ratelimitv2test-admin\",\"namespace\":\"default\"},\"spec\":{\"ports\":[{\"name\":\"ratelimitv2test-admin\",\"port\":8877,\"targetPort\":8877}],\"selector\":{\"service\":\"ratelimitv2test\"},\"type\":\"NodePort\"} [...]
                    },
                    "creationTimestamp": "2020-12-23T20:40:02Z",
                    "labels": {
                        "kat-ambassador-id": "ratelimitv2test",
                        "scope": "AmbassadorTest",
                        "service": "ratelimitv2test-admin"
                    },
                    "name": "ratelimitv2test-admin",
                    "namespace": "default",
                    "resourceVersion": "298122",
                    "selfLink": "/api/v1/namespaces/default/services/ratelimitv2test-admin",
                    "uid": "f34bbd2c-32cb-482d-8f49-538224ba5d9c"
                },
                "spec": {
                    "clusterIP": "10.43.111.82",
                    "externalTrafficPolicy": "Cluster",
                    "ports": [
                        {
                            "name": "ratelimitv2test-admin",
                            "nodePort": 31935,
                            "port": 8877,
                            "protocol": "TCP",
                            "targetPort": 8877
                        }
                    ],
                    "selector": {
                        "service": "ratelimitv2test"
                    },
                    "sessionAffinity": "None",
                    "type": "NodePort"
                },
                "status": {
                    "loadBalancer": {}
                }
            }
        ]
    }
}
